Backport some changes and fixes
Return the separator customization that got lost in some commit
Don't blur the nav when it's not visible
Don't scale down the article card when clicking on a tag

--- a/sass/_article-list.scss
+++ b/sass/_article-list.scss
@@ -31,7 +31,7 @@
 			}
 		}
 
-		&:active {
+		&:active:not(:has(.tag:active)) {
 			transform: var(--active);
 		}
 
